--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -13,10 +13,10 @@ restore_paused "yes"
 max_output_buffer_size "16384"
 
 audio_output {
-      type  "alsa"
-      name  "alsa for audio soundcard"
-      mixer_type "software"
+        type            "pulse"
+        name            "pulse audio"
 }
+
 audio_output {
 type               "fifo"
 name               "toggle_visualizer"
