--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -67,7 +67,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = i3
 modules-center = mpd
-modules-right =  alsa memory wlan eth battery temperature cpu date xkeyboard powermenu
+modules-right =  pulseaudio memory wlan eth battery temperature cpu date xkeyboard powermenu
 
 tray-position = right
 tray-padding = 2
@@ -118,6 +118,21 @@ label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
+[module/pulseaudio]
+type = internal/pulseaudio
+
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+sink = alsa_output.pci-0000_12_00.3.analog-stereo
+
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = true
+interval = 5
+format-volume = <label-volume>
+label-muted =   muted
+label-muted-foreground = #666
+
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -166,7 +181,7 @@ icon-play = 
 icon-pause = 
 icon-next = 
 
-label-song-maxlen = 25
+label-song-maxlen = 50
 label-song-ellipsis = true
 
 [module/xbacklight]
