--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -174,6 +174,12 @@ label-urgent-padding = 2
 
 [module/mpd]
 type = internal/mpd
+
+host = 127.0.0.1
+port = 6600
+
+label-offline = 🎜 mpd is offline
+
 format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
 
 icon-prev = 
