--- a/.config/i3/config
+++ b/.config/i3/config
@@ -164,6 +164,11 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# Use mpc for external keyboard
+bindsym XF86AudioPlay exec --nostartup-is mpc play
+bindsym XF86AudioNext exec --nostartup-is mpc next
+bindsym XF86AudioPrev exec --nostartup-is mpc prev
+
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
