--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,8 @@ bindsym --release Shift+$print  exec scrot -s -q 100 ~/Pictures/Screenshots/%Y-%
 bindsym --release $print        exec scrot -q 100 ~/Pictures/Screenshots/%Y-%m-%d_%H%M%S.png
 
 # --Start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
 
 # --Start dmenu
 bindsym $mod+d exec dmenu_run
@@ -198,5 +199,5 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 #exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Save-promts in browser fix
-floating_minimum_size 75 x 50
-floating_maximum_size 640 x 480
+#floating_minimum_size 75 x 50
+#floating_maximum_size 640 x 480
