--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -15,6 +15,7 @@ max_output_buffer_size "16384"
 audio_output {
         type            "pulse"
         name            "pulse audio"
+        mixer_type      "software"
 }
 
 audio_output {
